Added test for work analytics. Small refactoring